@@ -7,155 +7,129 @@
  */
 package io.nop.idea.plugin.utils;
 
-import com.intellij.lang.ASTNode;
-import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.TextRange;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.psi.PsiElement;
-import com.intellij.psi.PsiFile;
-import com.intellij.psi.search.FilenameIndex;
-import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.psi.tree.IElementType;
-import com.intellij.psi.xml.XmlAttribute;
-import com.intellij.psi.xml.XmlAttributeValue;
-import com.intellij.psi.xml.XmlElement;
-import com.intellij.psi.xml.XmlElementType;
-import com.intellij.psi.xml.XmlTag;
-import com.intellij.psi.xml.XmlTokenType;
-import io.nop.api.core.util.SourceLocation;
-import io.nop.commons.util.StringHelper;
-import io.nop.core.resource.ResourceHelper;
-import io.nop.xlang.xpl.xlib.XplLibHelper;
-
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Predicate;
+
+import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.project.Project;
+import com.intellij.openapi.util.TextRange;
+import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiManager;
+import com.intellij.psi.search.FilenameIndex;
+import com.intellij.psi.search.GlobalSearchScope;
+import com.intellij.psi.tree.IElementType;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.xml.XmlAttribute;
+import com.intellij.psi.xml.XmlTag;
+import com.intellij.psi.xml.XmlTokenType;
+import io.nop.api.core.util.ISourceLocationGetter;
+import io.nop.api.core.util.SourceLocation;
+import io.nop.commons.util.StringHelper;
+import io.nop.core.resource.ResourceHelper;
+import org.jetbrains.annotations.NotNull;
 
 public class XmlPsiHelper {
-    static final PsiFile[] EMPTY_FILES = new PsiFile[0];
-    static final PsiElement[] EMPTY_ELEMENTS = new PsiElement[0];
 
-    public static String absolutePath(String path, XmlElement element) {
+    public static String getNopVfsPath(ISourceLocationGetter locGetter) {
+        SourceLocation loc = locGetter != null ? locGetter.getLocation() : null;
+        String path = loc != null ? loc.getPath() : null;
+
+        // Note: SourceLocation#getPath() 得到的 jar 中的 vfs 路径会添加 classpath:_vfs 前缀
+        return path != null ? path.replace("classpath:_vfs", "") : null;
+    }
+
+    public static String getNopVfsPath(PsiElement element) {
+        PsiFile file = element.getContainingFile();
+        if (file == null) {
+            return null;
+        }
+
+        VirtualFile vf = file.getVirtualFile();
+        // Note: 在编辑过程中得到的 VirtualFile 可能为 null，需尝试通过
+        // PsiFile#getOriginalFile 获得 VirtualFile
+        if (vf == null && file.getOriginalFile() != file) {
+            vf = file.getOriginalFile().getVirtualFile();
+        }
+
+        return vf != null ? ProjectFileHelper.getNopVfsPath(vf) : null;
+    }
+
+    /**
+     * 获取 <code>path</code> 的 vfs 绝对路径。
+     * 若 <code>path</code> 为相对路径，则视为其相对于 <code>element</code> 所在文件的目录
+     */
+    public static String getNopVfsAbsolutePath(String path, PsiElement element) {
         String filePath = getNopVfsPath(element);
+
         return StringHelper.absolutePath(filePath, path);
     }
 
     public static List<PsiFile> findPsiFileList(Project project, String path) {
         String fileName = StringHelper.fileFullName(path);
-        PsiFile[] files = FilenameIndex.getFilesByName(project, fileName, GlobalSearchScope.allScope(project));
-        if (files.length == 0)
+        Collection<VirtualFile> vfList = FilenameIndex.getVirtualFilesByName(fileName,
+                                                                             GlobalSearchScope.allScope(project));
+        if (vfList.isEmpty()) {
             return Collections.emptyList();
+        }
 
         path = ResourceHelper.getStdPath(path);
 
-        List<PsiFile> ret = new ArrayList<>(files.length);
-        for (PsiFile file : files) {
-            String matchPath = ProjectFileHelper.getNopVfsStdPath(file.getVirtualFile());
-            if (Objects.equals(path, matchPath))
-                ret.add(file);
+        List<PsiFile> ret = new ArrayList<>(vfList.size());
+        for (VirtualFile vf : vfList) {
+            String vfPath = ProjectFileHelper.getNopVfsStdPath(vf);
+
+            if (Objects.equals(path, vfPath)) {
+                PsiFile f = PsiManager.getInstance(project).findFile(vf);
+                ret.add(f);
+            }
         }
         return ret;
     }
 
-    public static PsiFile[] findPsiFile(Project project, String path) {
-        List<PsiFile> list = findPsiFileList(project, path);
-        if (list.isEmpty())
-            return EMPTY_FILES;
-        return list.toArray(EMPTY_FILES);
-    }
-
-    public static List<PsiFile> findXplLib(Project project, XmlTag tag) {
-        String ns = StringHelper.getNamespace(tag.getName());
-        if ("thisLib".equals(ns)) {
-            PsiFile file = tag.getContainingFile();
-            String fileName = file.getName();
-            if (fileName.endsWith(".xlib")) {
-                // 同一个库文件可能存在多个定制文件
-                String path = ProjectFileHelper.getNopVfsPath(file.getVirtualFile());
-                List<PsiFile> list = findPsiFileList(project, path);
-                if (list.isEmpty())
-                    list = Collections.singletonList(file);
-                return list;
-            }
-
-            String path = ProjectFileHelper.getNopVfsPath(file.getVirtualFile());
-            int pos = path.lastIndexOf("/xlib/");
-            if (pos > 0) {
-                // 标签的实现文件，假定格式为/xlib/{libName}/impl_xxx.xpl
-                pos += "/xlib/".length();
-                int pos2 = path.indexOf('/', pos);
-                if (pos2 > 0) {
-                    return findPsiFileList(project, path.substring(0, pos2) + ".xlib");
-                }
-            }
-            return Collections.emptyList();
+    public static List<PsiFile> findPsiFilesByNopVfsPath(PsiElement element, String path) {
+        if (element == null || path == null) {
+            return List.of();
         }
 
-        XmlAttribute attr = tag.getAttribute("xpl:lib");
-        if (attr != null) {
-            List<String> paths = StringHelper.split(attr.getValue(), ',');
-            for (String path : paths) {
-                String libNs = XplLibHelper.getNamespaceFromLibPath(path);
-                if (ns.equals(libNs))
-                    return findPsiFileList(project, path);
-            }
-        }
+        Project project = element.getProject();
+        String absPath = getNopVfsAbsolutePath(path, element);
 
-        PsiFile[] files = FilenameIndex.getFilesByName(project, ns + ".xlib", GlobalSearchScope.allScope(project));
-        return files.length == 0 ? Collections.emptyList() : Arrays.asList(files);
+        return findPsiFileList(project, absPath);
     }
 
-    public static PsiElement[] findXplTag(Project project, XmlTag tag) {
-        List<PsiFile> files = findXplLib(project, tag);
-        if (files.isEmpty())
-            return EMPTY_ELEMENTS;
-
-        String tagBegin = "<" + tag.getLocalName();
-
-        List<PsiElement> ret = new ArrayList<>();
-        for (PsiFile file : files) {
-            String text = file.getText();
-            int fromPos = 0;
-            do {
-                int pos = text.indexOf(tagBegin, fromPos);
-                if (pos >= 0) {
-                    int end = pos + tagBegin.length();
-                    if (end == text.length() || text.charAt(end) == ' ' || text.charAt(end) == '/' || text.charAt(end) == '>') {
-                        PsiElement element = file.findElementAt(pos + 1);
-                        if (element != null && isXmlTag(element)) {
-                            ret.add(element);
-                            break;
-                        }
-                    }
-                    fromPos = end;
-                } else {
-                    break;
-                }
-            } while (true);
-        }
-        return ret.toArray(EMPTY_ELEMENTS);
-    }
-
-    private static boolean isXmlTag(PsiElement element) {
-        IElementType type = element.getNode().getElementType();
-        return type == XmlElementType.XML_NAME || type == XmlElementType.XML_TAG_NAME || type == XmlElementType.XML_TAG;
-    }
-
-    public static String getNopVfsPath(PsiElement element) {
-        PsiFile file = element.getContainingFile();
-        if (file == null)
+    /** 获取指定行列的 {@link PsiElement 元素} */
+    public static PsiElement getPsiElementAt(PsiFile psiFile, int line, int column) {
+        Document document = PsiDocumentManager.getInstance(psiFile.getProject()).getDocument(psiFile);
+        if (document == null) {
             return null;
+        }
 
-        VirtualFile vf = file.getVirtualFile();
-        if (vf == null)
-            return null;
+        int offset = document.getLineStartOffset(line - 1) + column - 1;
+        return psiFile.findElementAt(offset);
+    }
 
-        return ProjectFileHelper.getNopVfsPath(vf);
+    /** 获取指定位置的 {@link PsiElement 元素} */
+    public static PsiElement getPsiElementAt(PsiFile psiFile, SourceLocation loc) {
+        return getPsiElementAt(psiFile, loc.getLine(), loc.getCol());
+    }
+
+    /** 获取指定行列的指定类型的 {@link PsiElement 元素} */
+    public static <T extends PsiElement> T getPsiElementAt(PsiFile psiFile, SourceLocation loc, Class<T> type) {
+        PsiElement element = getPsiElementAt(psiFile, loc);
+
+        if (type.isInstance(element)) {
+            return (T) element;
+        }
+        return PsiTreeUtil.getParentOfType(element, type);
     }
 
     public static SourceLocation getLocation(PsiElement element) {
@@ -163,19 +137,18 @@ public class XmlPsiHelper {
     }
 
     public static SourceLocation getValueLocation(XmlTag element) {
-        if (element.getValue() == null)
-            return null;
-
         TextRange range = element.getValue().getTextRange();
         int offset = range.getStartOffset();
+
         return getLocation(element, offset, range.getLength());
     }
 
     static SourceLocation getLocation(PsiElement element, int offset, int len) {
         PsiFile psiFile = element.getContainingFile();
         VirtualFile vf = psiFile.getVirtualFile();
-        if (vf == null)
+        if (vf == null) {
             return null;
+        }
 
         String path = ProjectFileHelper.getNopVfsPath(vf);
 
@@ -186,90 +159,113 @@ public class XmlPsiHelper {
         return SourceLocation.fromLine(path, sourceLine, sourceColumn, len);
     }
 
-    private static PsiElement getRootElement(PsiElement element) {
-        do {
-            PsiElement parent = element.getParent();
-            if (parent == null)
-                return element;
-            element = parent;
-        } while (true);
-    }
-
-    public static String getAttrName(XmlAttributeValue value) {
-        if (value == null)
-            return null;
-
-        if (!(value.getParent() instanceof XmlAttribute))
-            return null;
-
-        XmlAttribute attr = (XmlAttribute) value.getParent();
-        return attr.getName();
-    }
-
-    public static XmlAttribute getAttr(XmlAttributeValue value) {
-        if (value == null)
-            return null;
-
-        if (!(value.getParent() instanceof XmlAttribute))
-            return null;
-
-        XmlAttribute attr = (XmlAttribute) value.getParent();
-        return attr;
-    }
-
-    public static boolean hasChild(XmlTag tag) {
-        return tag.getNode().findChildByType(XmlElementType.XML_TAG) != null;
-    }
-
     public static boolean isInComment(PsiElement element) {
         IElementType elementType = element.getNode().getElementType();
         return elementType == XmlTokenType.XML_COMMENT_END
-                || elementType == XmlTokenType.XML_COMMENT_START
-                || elementType == XmlTokenType.XML_COMMENT_CHARACTERS;
-    }
-
-    public static boolean isElementType(PsiElement elm, IElementType type) {
-        if (elm == null)
-            return false;
-        ASTNode node = elm.getNode();
-        if (node == null)
-            return false;
-
-        return node.getElementType() == type;
+               || elementType == XmlTokenType.XML_COMMENT_START
+               || elementType == XmlTokenType.XML_COMMENT_CHARACTERS;
     }
 
     public static Set<String> getChildTagNames(XmlTag tag) {
-        Set<String> tagNames = new HashSet<>();
+        Set<String> names = new HashSet<>();
+
         for (PsiElement element : tag.getChildren()) {
             if (element instanceof XmlTag) {
-                tagNames.add(((XmlTag) element).getName());
+                names.add(((XmlTag) element).getName());
             }
         }
-        return tagNames;
+        return names;
     }
 
-    public static XmlTag getXmlTag(PsiElement element) {
-        if (element == null)
-            return null;
+    public static Set<String> getTagAttrNames(XmlTag tag) {
+        Set<String> names = new HashSet<>();
 
-        if (element instanceof XmlTag)
-            return ((XmlTag) element);
+        for (XmlAttribute attr : tag.getAttributes()) {
+            names.add(attr.getName());
+        }
+        return names;
+    }
 
-        do {
-            PsiElement parent = element.getParent();
-            if (parent == null)
-                return null;
-            if (parent instanceof XmlTag)
-                return (XmlTag) parent;
-            element = parent;
-        } while (true);
+    /**
+     * 根据属性值获取匹配的子节点，在 <code>attrName</code> 为 <code>null</code> 时，匹配节点的标签名
+     * <p/>
+     * 其逻辑等价于 {@link io.nop.core.lang.xml.XNode#childByAttr}
+     */
+    public static XmlTag getChildTagByAttr(XmlTag tag, String attrName, String attrValue) {
+        for (PsiElement element : tag.getChildren()) {
+            if (!(element instanceof XmlTag child)) {
+                continue;
+            }
+
+            if (attrName == null) {
+                if (child.getName().equals(attrValue)) {
+                    return child;
+                }
+            } else if (attrValue.equals(child.getAttributeValue(attrName))) {
+                return child;
+            }
+        }
+        return null;
+    }
+
+    /** 根据查找子节点上指定名字的属性 */
+    public static List<XmlAttribute> getAttrsFromChildTag(XmlTag tag, String attrName) {
+        List<XmlAttribute> attrs = new ArrayList<>();
+
+        for (PsiElement element : tag.getChildren()) {
+            if (!(element instanceof XmlTag child)) {
+                continue;
+            }
+
+            XmlAttribute attr = child.getAttribute(attrName);
+            if (attr != null) {
+                attrs.add(attr);
+            }
+        }
+        return attrs;
+    }
+
+    /** 从子节点上查找公共的属性名 */
+    public static List<String> getCommonAttrNamesFromChildTag(XmlTag tag) {
+        List<String> attrNames = new ArrayList<>();
+
+        for (PsiElement element : tag.getChildren()) {
+            if (!(element instanceof XmlTag child)) {
+                continue;
+            }
+
+            Set<String> names = getTagAttrNames(child);
+            if (attrNames.isEmpty()) {
+                attrNames.addAll(names);
+            } else {
+                attrNames.retainAll(names);
+            }
+        }
+        return attrNames;
+    }
+
+    /** 找到第一个符合条件的 {@link PsiElement 元素} */
+    public static <T extends PsiElement> T findFirstElement(
+            PsiElement element, Predicate<? super @NotNull PsiElement> condition
+    ) {
+        PsiElement[] result = new PsiElement[] { null };
+
+        PsiTreeUtil.processElements(element, el -> {
+            if (condition.test(el)) {
+                result[0] = el;
+                return false;
+            }
+            return true; // 继续遍历
+        });
+        return (T) result[0];
     }
 
     public static XmlTag getRoot(XmlTag tag) {
         do {
             XmlTag parent = tag.getParentTag();
-            if (parent == null)
+            if (parent == null) {
                 return tag;
+            }
             tag = parent;
         } while (true);
     }
@@ -278,8 +274,9 @@ public class XmlPsiHelper {
         for (XmlAttribute attr : tag.getAttributes()) {
             if (url.equals(attr.getValue())) {
                 String name = attr.getName();
-                if (name.startsWith("xmlns:"))
+                if (name.startsWith("xmlns:")) {
                     return name.substring("xmlns:".length());
+                }
             }
         }
         return null;
